force-app/main/default/objects/DU_ContractAsset__c/DU_ContractAsset__c.object-meta.xml
<CustomObject>
    <description>CDM: A contract asset allows relating multiple contracts to the same asset (vehicle) as well as multiple assets to one contract. It indicates the contractual history of an asset (vehicle) incl. the active one. Attributes which are vehicle related and can be different for multiple vehicles related to one contract are stored on the contract asset.</description>
    <label>Contract Asset</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Contract Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Assets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>