force-app/main/default/objects/DU_ContractAsset__c/fields/DU_Asset__c.field-meta.xml
<CustomField>
    <fullName>DU_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the a asset record to a contract record using the ContractAsset junction object</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contract Assets</relationshipLabel>
    <relationshipName>DU_ContractAssets</relationshipName>
    <type>Lookup</type>
</CustomField>