force-app/main/default/objects/DU_ContractAsset__c/fields/DU_BookValueEndOfTerm__c.field-meta.xml
<CustomField>
    <fullName>DU_BookValueEndOfTerm__c</fullName>
    <description>CDM: Book Value at the end of the contract</description>
    <inlineHelpText>Book Value at the end of contract term</inlineHelpText>
    <label>Book Value at the end of term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>