force-app/main/default/objects/DU_ContractAsset__c/fields/DU_Contract__c.field-meta.xml
<CustomField>
    <fullName>DU_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the a contract record to a asset record using the ContractAsset junction object</description>
    <label>Contract</label>
    <referenceTo>DU_Contract__c</referenceTo>
    <relationshipLabel>Contract Assets</relationshipLabel>
    <relationshipName>DU_ContractAssets</relationshipName>
    <type>Lookup</type>
</CustomField>