force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ContractedMileageKM__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractedMileageKM__c</fullName>
    <description>CDM: Agreed mileage for this contract​
Availability: 1.6.0.13</description>
    <label>Contracted Mileage (KM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>