force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ContractedMileageMI__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractedMileageMI__c</fullName>
    <description>CDM: Agreed mileage (MI) for this contract​</description>
    <label>Contracted Mileage MI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>