force-app/main/default/objects/DU_ContractAsset__c/fields/DU_CurrentMileageKM__c.field-meta.xml
<CustomField>
    <fullName>DU_CurrentMileageKM__c</fullName>
    <description>CDM: The km status of the used vehicle at the conclusion of the contract</description>
    <label>Current Mileage KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>