force-app/main/default/objects/DU_ContractAsset__c/fields/DU_CurrentMileageMI__c.field-meta.xml
<CustomField>
    <fullName>DU_CurrentMileageMI__c</fullName>
    <description>CDM: The Mi status of the used vehicle at the conclusion of the contract
Availability: 1.6.0.13</description>
    <label>Current Mileage MI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>