force-app/main/default/objects/DU_ContractAsset__c/fields/DU_DamageTotalAtReturn__c.field-meta.xml
<CustomField>
    <fullName>DU_DamageTotalAtReturn__c</fullName>
    <description>CDM: Describes the total damage when the vehicle is returned</description>
    <label>Total amount of damage at return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>