force-app/main/default/objects/DU_ContractAsset__c/fields/DU_DateEndPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_DateEndPlanned__c</fullName>
    <description>CDM: Stores the date when contract is planned to be ended</description>
    <formula>DU_Contract__r.DU_DateEndPlanned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>