force-app/main/default/objects/DU_ContractAsset__c/fields/DU_DateOfOrder__c.field-meta.xml
<CustomField>
    <fullName>DU_DateOfOrder__c</fullName>
    <description>CDM: Date on which the vehicle was ordered from the manufacturer. Lease: Date on which the leasing contract was signed by the customer. Order with the manufacturer may have been placed before or after this date.</description>
    <label>Date of Order</label>
    <type>Date</type>
</CustomField>