force-app/main/default/objects/DU_ContractAsset__c/fields/DU_DateStartPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_DateStartPlanned__c</fullName>
    <description>CDM: Stores the date when contract is actually started</description>
    <formula>DU_Contract__r.DU_DateStartPlanned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>