force-app/main/default/objects/DU_ContractAsset__c/fields/DU_DateVehicleRegistrationCustomer__c.field-meta.xml
<CustomField>
    <fullName>DU_DateVehicleRegistrationCustomer__c</fullName>
    <description>CDM: Date of admission to the contract holder/policyholder.
Leasis: Date of registration of the leased car. In most cases it corresponds to the contract start date.</description>
    <label>Date Vehicle Registration Customer</label>
    <type>Date</type>
</CustomField>