force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalID__c</fullName>
    <description>CDM: Indicates the External ID (DU_ExternalID_c) can be used to create a relationship from DU_Contract_c to Asset</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>