force-app/main/default/objects/DU_ContractAsset__c/fields/DU_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>DU_LicensePlate__c</fullName>
    <description>CDM: Holds the license plate number of the contracted asset, at the time it was contracted​</description>
    <label>License Plate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>