force-app/main/default/objects/DU_ContractAsset__c/fields/DU_MileageTotalAtReturn__c.field-meta.xml
<CustomField>
    <fullName>DU_MileageTotalAtReturn__c</fullName>
    <description>CDM: Describes the total mileage when the vehicle is returned</description>
    <label>Total mileage at return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>