force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductGroup__c</fullName>
    <description>CDM: Contains the VWFS product group of the contract e.g. Finance, Leasing, Insurance, Service</description>
    <formula>TEXT(DU_Contract__r.DU_ProductGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>