force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ProviderResidualValueRisk__c.field-meta.xml
<CustomField>
    <fullName>DU_ProviderResidualValueRisk__c</fullName>
    <description>CDM: Describes the type of residual value risk from the perspective of the asset provider</description>
    <label>Provider Residual Value Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>No Risk</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Direct Risk</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Indirect Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>