force-app/main/default/objects/DU_ContractAsset__c/fields/DU_PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>DU_PurchasePrice__c</fullName>
    <description>CDM: Price of the related vehicle​</description>
    <label>Purchase Price​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>