force-app/main/default/objects/DU_ContractAsset__c/fields/DU_RemarketingRevenue__c.field-meta.xml
<CustomField>
    <fullName>DU_RemarketingRevenue__c</fullName>
    <description>CDM: Actual sales price achieved through remarketing (net)</description>
    <label>Remarketing Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>