force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValue__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValue__c</fullName>
    <description>CDM: Holds the residual value of the contracted asset, at the time it was contracted</description>
    <label>Residual Value​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>