force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValueContracted__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValueContracted__c</fullName>
    <description>CDM: Contractually agreed residual value at start of contract</description>
    <label>Contracted Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>