force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValueEndOfTerm__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValueEndOfTerm__c</fullName>
    <description>CDM: Residual Value at the end of the contract</description>
    <inlineHelpText>Residual Value at the end of contract term</inlineHelpText>
    <label>Residual Value at the end of term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>