force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValueForecast__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValueForecast__c</fullName>
    <description>CDM: Expected marketing revenue of the vehicle at the end of the contract (updated forecast value based on current market knowledge) Basis for creating risk provisions (contractual residual value - forecast value = risk provision)</description>
    <label>Forceasted Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>