force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValueSubvention__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValueSubvention__c</fullName>
    <description>CDM: Support amount of the residual value by the manufacturer (e.g. Audi in Germany) or the dealer. This amount is paid to FS AG by the manufacturer after termination of the contract</description>
    <label>Subventioned Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>