force-app/main/default/objects/DU_ContractAsset__c/fields/DU_ResidualValueTakeoverVWFS__c.field-meta.xml
<CustomField>
    <fullName>DU_ResidualValueTakeoverVWFS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Indication whether the residual value risk lies with the leasing/VTI or with the dealer (only relevant for Germany)</description>
    <label>Residual Value Takeover VWFS</label>
    <type>Checkbox</type>
</CustomField>