force-app/main/default/objects/DU_ContractAsset__c/fields/DU_VehiclePrice__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePrice__c</fullName>
    <description>CDM: Price of the vehicle in local currency​</description>
    <label>Vehicle Price​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>