force-app/main/default/objects/DU_ContractAsset__c/fields/DU_VehiclePurchasePriceGross__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePurchasePriceGross__c</fullName>
    <description>CDM: Vehicle Purchase Price Gross. Vehicle Purchase Price Net enhanced by VAT value for a specific market</description>
    <formula>DU_VehiclePurchasePriceNet__c *
(1+ VALUE($CustomMetadata.DU_Settings__mdt.CDM_VATRate.DU_Value__c)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vehicle Purchase Price Gross calculated by formula</inlineHelpText>
    <label>Vehicle Purchase Price Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>