force-app/main/default/objects/DU_ContractAsset__c/fields/DU_VehiclePurchasePriceNet__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePurchasePriceNet__c</fullName>
    <description>CDM: Vehicle Purchase Price Net calculated by formula. Based on Book Value at the end of term or Residual Value at the end of term enhanced by markup.</description>
    <formula>IF( DU_Contract__r.DU_AccountId__r.RecordType.DeveloperName == &apos;DU_PersonAccount&apos;,

   IF( (DU_BookValueEndOfTerm__c &gt; (DU_ResidualValueEndOfTerm__c + VALUE($CustomMetadata.DU_Settings__mdt.CDM_B2CMarkup.DU_Value__c)) ),
        DU_BookValueEndOfTerm__c ,
        DU_ResidualValueEndOfTerm__c +VALUE($CustomMetadata.DU_Settings__mdt.CDM_B2CMarkup.DU_Value__c)
   ),
   IF( DU_Contract__r.DU_AccountId__r.RecordType.DeveloperName == &apos;DU_BusinessAccount&apos;, 
       IF( (DU_BookValueEndOfTerm__c &gt; (DU_ResidualValueEndOfTerm__c + VALUE($CustomMetadata.DU_Settings__mdt.CDM_B2BMarkup.DU_Value__c)) ),
           DU_BookValueEndOfTerm__c ,
           DU_ResidualValueEndOfTerm__c +VALUE($CustomMetadata.DU_Settings__mdt.CDM_B2BMarkup.DU_Value__c)
		 ),0
     
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vehicle Purchase Price Net calculated by formula</inlineHelpText>
    <label>Vehicle Purchase Price Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>